welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite(); droite() // dans le bon sens
while(!estSurBicsuit && !estFaceMur){
		avance()
}
if (estSurBiscuit){ 
	prendBiscuit()
	while(!estSurBiscuit){
		recule()
	}
avance()
poseBiscuit()
avance()
}
droite()
avance()
gauche()
avance()	

